# miniGitHub

./: index.html
github/: CMakeLists.txt
github/client/: main_client.cpp
github/miniGit/: main_1.cpp  miniGit.cpp  miniGit.hpp
github/server/: main_server.cpp
